--- a/barret-magic/src/app/member-card.component.html
+++ b/barret-magic/src/app/member-card.component.html
@@ -14,5 +14,12 @@
     [style.background-color]="getCategoryColor()">
     <h3>{{ member.categoria }}</h3>
   </div>
+
+  <!-- Focs artificials -->
+  <div class="fireworks-container" *ngIf="revealState === 2">
+    <div class="firework" [style.--firework-color]="getCategoryColor()"></div>
+    <div class="firework firework-2" [style.--firework-color]="getCategoryColor()"></div>
+    <div class="firework firework-3" [style.--firework-color]="getCategoryColor()"></div>
+  </div>
 </div>
 
