Canviada la frase de Carles

--- a/barret-magic/src/app/personatge.component.html
+++ b/barret-magic/src/app/personatge.component.html
@@ -24,7 +24,7 @@
         <div class="winner-info">
           <h3 class="winner-name">Carles</h3>
           <p class="winner-description">
-            Per la seva dedicació, entusiasme i contribució excepcional a la Muixeranga de Barcelona durant aquest any
+            Carles és el personatge de l’any perquè sempre és qui fa riure la colla, el que “apixa” en cada assaig, el nostre home del temps particular i el dels mossos carinyosos (o no tant) a mitja colla. Després de quedar-se a les portes l’any passat, enguany s’ha guanyat el premi de sobra.
           </p>
         </div>
       </div>
