--- a/barret-magic/src/app/member-card.component.html
+++ b/barret-magic/src/app/member-card.component.html
@@ -1,4 +1,4 @@
-<div class="member-card" (click)="toggleReveal()">
+<div class="member-card" (click)="handleClick()">
   <!-- Àlies - sempre visible -->
   <div class="alias">{{ member.alias }}</div>
 
