Actualitzat algun nom

--- a/barret-magic/src/app/buscador.component.html
+++ b/barret-magic/src/app/buscador.component.html
@@ -40,7 +40,7 @@
         <div class="member-info">
           <div class="member-alias">{{ member.alias }}</div>
           <div class="member-name">{{ member.nom }}</div>
-          <div class="member-frase">"{{ member.fraseBarret }}"</div>
+          <div class="member-frase">"{{ member.context }}"</div>
         </div>
         <div 
           class="member-category"
