Actualitzat excel i arrreglats colors tags del buscador

--- a/barret-magic/src/app/buscador.component.html
+++ b/barret-magic/src/app/buscador.component.html
@@ -44,7 +44,7 @@
         </div>
         <div 
           class="member-category"
-          [style.color]="getCategoryColor(member.categoria)">
+          [style.background-color]="getCategoryColor(member.categoria)">
           {{ member.categoria }}
         </div>
       </div>
